# HistoricalCode

./: LICENSE  README.md
AudioSnake/: LICENSE  README.md  build.sbt
BQFFB/src/dsp/: RemezFIRFilter.java
Backup/: LICENSE  README.md  build.sbt
BelaExperiments/: LICENSE  README.md
BelaExperiments/heart/: _main.scd
Bookmarks/: README.md
Bosque/: README.md  README.textile  build.xml  readme_old.html
Bosque/bosque/licenses/: Bosque-License.txt
Bosque/bosque/sc_tests/: 2DVisualizer.rtf  AngleVisualizer.rtf  CtrlBus_Example.txt  EnvAt_Example.rtf  EnvAt_Session.txt  (+10 more)
Bosque/licenses/: Bosque-License.txt  TimeBased-License.txt
Bosque/sc_tests/: CtrlBus_Example.rtf  CtrlBus_Example.txt  EnvAt_Session.txt  EnvTestNew.html  HeadTest080731_1.txt  Session080730_2.txt  Session080730_2Func.rtf  Speed_Example.rtf  VolCon.rtf  kdtree_tests.html  run.rtf  scratch_abs_synth_bosque.rtf
Bosque/timebased/: .classpath  .gitignore  .project  SwingOSC_TCP.command  build.xml
ChocoTest/: README.md  build.sbt
Citarj2017Code/: .gitignore  LICENSE  README.md  build.sbt
CompileTimeFunctionSerializationTest/: LICENSE  README.md  build.sbt
ConfluentReactive/: README.md
ContextSnake/: LICENSE  README.md  build.sbt
ContextSnake/notes/: DropLeft.txt  Snake.txt  TryMove.txt  debug.txt  erlkoenig.txt
ConvertKonturToMellite/: .gitignore  LICENSE  README.md  build.sbt
Cupola/: .gitignore  README.md  build.sbt
Cupola/licenses/: Cupola-License.txt
Cupola/notes/: InstallationReadme.rtf  OSC_Analysis.txt  OSC_DocuNeu.rtf  OSC_Reference.txt  sbt
Cupola/project/: build.properties
CupolaRelais/project/: build.properties
CupolaVideoPlayer/: .gitignore  README.textile  medialist.xml
CupolaVideoPlayer/licenses/: CupolaVideoPlayer-License.txt
CupolaVideoPlayer/project/: build.properties
DataNucleusTest/: README.txt  build.xml  datanucleus.properties  delete_database.sh  enhance.sh  run.sh  start_hsql.sh
DataNucleusTest/resources/: package-h2.orm  package-hsql.orm
DorianLaF/licenses/: Cafeta-License.txt  DorianLaF-License.txt  JavaImageFilters-License.txt
DorianLaF/project/: build.properties
DottyLucre/: .travis.yml  README.md  build.sbt
DottyLucre/notes/: Notes200810.md
DottyLucrePatMat/: README.md  build.sbt
DottyLucrePatMat/project/: plugins.sbt
Fd2AsmInc/: README.md  ReadMe.fnf  fd2AsmInc  fd2AsmInc.asm  fd2AsmInc.asm.info  fd2AsmInc.doc  fd2AsmInc.doc.info  fd2AsmInc.dok  fd2AsmInc.dok.info
FontEmbedTest/: README.md  build.sbt
GridSphere_m/: Archaversine.m  AreEqual.m  AreWithin.m  Cartesian2Spherical.m  DistinctFromPrevious.m  DivideTriangles.m  ElementWiseMean.m  FindNearestLongitudes.m  FindNearestNeighbors.m  FindNearestNeighborsWithinNearbyLatitudes.m  GoldenRatio.m  GreatCircleDistance.m  GridSphere.m  Haversine.m  LICENSE  Logarithm.m  LookupNearestNeighbor.m  LookupNearestNeighbors.m  LookupNeighbors.m  NumElems.m  README.md  Radians2Degrees.m  RangeToNext.m  RemoveEqualPairs.m  RemoveEquals.m  Rows.m  SortPairsByOnes.m
GyCollider/: GyCollider.command  TestScript.groovy
HIDTest/: README.md  build.sbt
Lighthouse/sketches/: DetectOnsets.txt
MacroKnownSubclassesTest/: build.sbt
MarkdownTest/: README.md  build.sbt
ReimplementSP/: README.md
SonaSound/: AUTHORS  Makefile.am  Makefile.in  README  README.MacOsX  README.fftw  README.portaudio  aclocal.m4  config.h.in  config.h.in~  configure  configure.in  sonasound.glade
SonaSound/CVS/: Entries  Repository
SonaSound/autom4te.cache/: output.0  requests  traces.0
SonaSound/intl/CVS/: Entries  Repository
SonaSound/pixmaps/: close_device.xpm  dont_draw.xpm  draw.xpm  open_device.xpm  reset.xpm  start.xpm  start_and_draw.xpm  stop.xpm  stop_and_dont_draw.xpm
SonaSound/pixmaps/CVS/: Entries  Repository  Root
SonaSound/po/: ChangeLog  Makefile.in
SonaSound/po/CVS/: Entries  Repository
SonaSound/src/: Makefile.am  Makefile.in  audioInit.c  audioInit.h  audioIo.c  audioIo.h  callbacks.c  callbacks.h  fft.c  fft.h  float_cast.h  glDraw.c  glDraw.h  globalsInit.c  globalsInit.h  helpers.c  helpers.h  interface.c  interface.h  lpc.c  lpc.h  main.c  palette.h  portaudio.h  sonasound.h  sonogram.c  sonogram.h  support.c  support.h  waveForm.c  waveForm.h  window.c  window.h
SonaSound/src/CVS/: Entries  Repository
SpeechTest/: .gitignore  README.md  build.sbt
SubminCreator/: build.sbt
SubminCreator/licenses/: SubminCreator-License.txt
SuperColliderUGenDataBase_Test/: build.sbt  test.json  test.yaml
SwingBoxTest/: README.md  build.sbt
Transactional/: README.md  README.textile
Transactional/licenses/: Transactional-License.txt
Transactional/project/: project.scala
TxnInterpreter/: LICENSE  README.md  build.sbt
VariousSC/: CellularAutomata.scd  MetallAusprobieren.scd  SC_NuagesLaunch.rtf  SpannungFuerSub.scd
VariousSC/Amplifikation/: AmpBeltrami.sc  AmpDeconv.sc  AmpFeedback.sc  AmpMedian.sc  AmpPlayer.sc  AmpProcess.sc  AmpTraumText.sc  AmpUBeltrami.sc  AmpUGlassOut.sc  AmpUOutput.sc  AmpUSpkrOut.sc  AmpUWipe.sc  AmpZeroCross.sc  Amplifikation.sc
VariousSC/HMSS/: NuagesUJohannes.sc  NuagesULudger.sc  NuagesUMarkus.sc  NuagesUPiezo1.sc  NuagesUPiezo2.sc
VariousSC/sciss/: JClipboard.sc  NuagesSuhl.sc  OSCFile.sc  OSCTotalRecall.sc  ScissPlus.sc  ScissUtil.sc  extSoundFile.sc
VariousSC/wolkenpumpe/: NuagesControlMapWatcher.sc  NuagesGUI.sc  NuagesGUIBox.sc  NuagesGUIConn.sc  NuagesGUIPanel.sc  NuagesLinkedGraph.sc  NuagesOSCBundle.sc  NuagesProc.sc  NuagesProxies.sc  NuagesSoloManager.sc  NuagesSynthDefWatcher.sc  NuagesT.sc  NuagesTConnect.sc  NuagesTMap.sc  NuagesTProcAttr.sc  NuagesTProcCreate.sc  NuagesTProcDup.sc  NuagesTProcDying.sc  NuagesTProcFadeRemove.sc  NuagesTProcInsert.sc  NuagesTProcOutput.sc  NuagesTProcPlay.sc  NuagesTProcRemove.sc  NuagesTRecorder.sc  NuagesU.sc  NuagesUAchilles.sc  NuagesUAutoGate.sc  NuagesUAutoHilbert.sc  NuagesUBasicMic.sc  NuagesUCNoise.sc  NuagesUCOsc.sc  NuagesUConvolve.sc  NuagesUDummyOutput.sc  NuagesUFactory.sc  NuagesUFilter.sc  NuagesUFilterSynth.sc  NuagesUFragment.sc  NuagesUFreqFilter.sc  NuagesUGain.sc  NuagesUGen.sc  (+20 more)
(+913 files in other folders)
